fixed material icons spacing issue

--- a/scss/_adk-fonts.scss
+++ b/scss/_adk-fonts.scss
@@ -68,6 +68,7 @@
   font-size: 24px;  /* Preferred icon size */
   display: inline-block;
   line-height: 1;
+  vertical-align: middle;
   text-transform: none;
   letter-spacing: normal;
   word-wrap: normal;
